--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "csv-writer": "^1.6.0",
+    "delay": "^5.0.0",
     "esm": "^3.2.25",
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
